# kana-tui

./: Cargo.toml  README.md
src/: app.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  render.rs  tui.rs
src/models/: answer.rs  guess.rs  kana.rs  mod.rs
src/pages/: config_page.rs  homepage.rs  mod.rs  result_page.rs  study_page.rs
src/study/: hiragana.rs  kana.rs  katakana.rs  mod.rs
src/widgets/: button.rs  menu.rs
